--- a/package.json
+++ b/package.json
@@ -5,15 +5,12 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "babel-runtime": "6.18.0",
-    "meteor-node-stubs": "~0.2.0",
-    "moment": "^2.17.1",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-router": "^3.0.0",
-    "simpl-schema": "0.0.3"
-  },
-  "engines": {
-    "node": "4.6.2"
+    "@babel/runtime": "^7.0.0-beta.51",
+    "meteor-node-stubs": "^0.4.1",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "simpl-schema": "^1.5.0"
   }
 }
