--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
-  "name": "short-lnk",
+  "name": "NotesApp",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "test": "meteor test --driver-package=cultofcoders:mocha"
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.51",
-    "babel-polyfill": "^6.26.0",
-    "meteor-node-stubs": "^0.4.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-meteor-data": "^0.2.11",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "simpl-schema": "^1.5.0"
+  },
+  "devDependencies": {
+    "babel-polyfill": "^6.26.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "expect": "^1.20.2",
+    "meteor-node-stubs": "^0.4.1"
   }
 }
